--- a/deep-learning-with-pytorch-lightning/01-pytorch-lightning-basic/02_cancer_tissue_detection.ipynb
+++ b/deep-learning-with-pytorch-lightning/01-pytorch-lightning-basic/02_cancer_tissue_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO/O5h00GlKGyx9b2+BybHc",
+      "authorship_tag": "ABX9TyMgy/Ol8XchnYz1OHoE32J3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,10 +64,27 @@
         "!pip install opendatasets --upgrade --quiet"
       ],
       "metadata": {
-        "id": "oDEJVSarlx3e"
+        "id": "oDEJVSarlx3e",
+        "outputId": "a915dc72-aa0a-4f63-ab78-393544f5d426",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 708 kB 9.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 5.9 MB 48.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 419 kB 58.1 MB/s \n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "tensorflow 2.8.2+zzzcolab20220719082949 requires tensorboard<2.9,>=2.8, but you have tensorboard 2.10.0 which is incompatible.\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -112,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ilmNzE_wlfVU",
-        "outputId": "70597850-86ac-4ff7-ea23-dc4a14170938"
+        "outputId": "83cd2b8a-5499-4211-bc62-8d470f2bca42"
       },
       "execution_count": 3,
       "outputs": [
@@ -123,7 +140,7 @@
             "pandas version: 1.3.5\n",
             "numpy version: 1.21.6\n",
             "torch version: 1.12.1+cu113\n",
-            "pytorch ligthening version: 1.7.6\n"
+            "pytorch ligthening version: 1.7.7\n"
           ]
         }
       ]
@@ -148,7 +165,7 @@
       "metadata": {
         "id": "9EDhEVKf09Rs"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +186,7 @@
         "id": "ajuf-IiN09YP",
         "outputId": "10c5e67e-f871-42e2-8090-0ce7cef471a5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +239,7 @@
         },
         "outputId": "0c322dd6-4875-49d1-acc7-e48adeef87dd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +402,7 @@
         },
         "outputId": "89b5268c-53b8-4a1b-f7b7-a3b9eac83e59"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -425,7 +442,7 @@
         "id": "5zXnITzH4Yy6",
         "outputId": "474769ed-822c-48f6-d934-fd7bb1d72b71"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,7 +485,7 @@
         "id": "pBfING_Q5AaK",
         "outputId": "99add4ec-270b-4c20-b483-d3e6c55dc4c3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +517,7 @@
         "id": "hQkSgHBL5udh",
         "outputId": "917cc77d-e4f4-4d66-9f64-1a739288616c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -534,7 +551,7 @@
         "id": "Re7_ju6a7Cnv",
         "outputId": "d9beeb9d-cbb0-4991-d01c-52e75a15d5f9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,7 +580,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,7 +608,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +653,7 @@
           "height": 206
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -796,7 +813,7 @@
       "metadata": {
         "id": "Y-FM-0mvqtlf"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -850,7 +867,7 @@
       "metadata": {
         "id": "a6VWc81dq_uG"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -881,7 +898,7 @@
       "metadata": {
         "id": "4LoLsn-_vI6G"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -909,7 +926,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +953,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -960,7 +977,7 @@
       "metadata": {
         "id": "FsWsFuifMSvC"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -974,10 +991,121 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "To build CNN image classifier, let's divide the process into multiple steps, as follows:\n",
+        "\n",
+        "1. Initializing the model\n",
+        "2. Configuring the optimizer\n",
+        "3. Configuring training and testing"
+      ],
       "metadata": {
         "id": "j1iDqIHnM4bp"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ImageClassifier(pl.LightningModule):\n",
+        "\n",
+        "  def __init__(self, learning_rate=0.001):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.learning_rate = learning_rate \n",
+        "\n",
+        "    # let's build two convolution layers\n",
+        "    self.conv_layer1 = nn.Conv2d(in_channels=3, out_channels=3, kernel_size=3, stride=1, padding=1)  # Input size (256, 3, 32, 32)\n",
+        "    self.relu1 = nn.ReLU()                       # output_shape: (256, 3, 32, 32)\n",
+        "    self.pooling = nn.MaxPool2d(kernel_size=2)   # output_shape: (256, 3, 16, 16)\n",
+        "\n",
+        "    self.conv_layer2 = nn.Conv2d(in_channels=3, out_channels=6, kernel_size=3, stride=1, padding=1)  # output_shape: (256, 6, 16, 16)\n",
+        "    self.relu2 = nn.ReLU()                       # output_shape: (256, 6, 16, 16)\n",
+        "\n",
+        "    # # let's build six fully connected layers\n",
+        "    self.fc1 = nn.Linear(in_features=16 * 16, out_features=1000)\n",
+        "    self.fc2 = nn.Linear(in_features=1000, out_features=500)\n",
+        "    self.fc3 = nn.Linear(in_features=500, out_features=250)\n",
+        "    self.fc4 = nn.Linear(in_features=250, out_features=120)\n",
+        "    self.fc5 = nn.Linear(in_features=120, out_features=60)\n",
+        "    self.fc6 = nn.Linear(in_features=60, out_features=2)  # Since this is a binary classification, the output should be the probability for the two classes.\n",
+        "\n",
+        "    self.loss = nn.CrossEntropyLoss()\n",
+        "    self.save_hyperparameters()\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    output = self.conv_layer1(x)\n",
+        "    output = self.relu1(output)\n",
+        "    output = self.pooling(output)\n",
+        "\n",
+        "    output = self.conv_layer2(output)\n",
+        "    output = self.relu2(output)\n",
+        "\n",
+        "    # flatten the multidimensional output to single-dimensional to pass into linear layers\n",
+        "    output = output.view(-1, 6 * 16 * 16)\n",
+        "\n",
+        "    output = self.fc1(output)\n",
+        "    output = self.fc2(output)\n",
+        "    output = self.fc3(output)\n",
+        "    output = self.fc4(output)\n",
+        "    output = self.fc5(output)\n",
+        "    output = self.fc6(output)\n",
+        "    return output\n",
+        "\n",
+        "  def configure_optimizers(self):\n",
+        "    params = self.parameters()\n",
+        "    optimizer = optim.Adam(params=params, lr=self.learning_rate)\n",
+        "    return optimizer\n",
+        "\n",
+        "  def training_step(self, batch, batch_idx):\n",
+        "    inputs, targets = batch\n",
+        "    outputs = self(inputs)\n",
+        "    train_accuracy = accuracy(outputs, targets)\n",
+        "    loss = self.loss(outputs, targets)\n",
+        "\n",
+        "    self.log(\"train_accuracy\", train_accuracy, prog_bar=True)\n",
+        "    self.log(\"train_loss\", loss)\n",
+        "    return {\"loss\": loss, \"train_accuracy\": train_accuracy}\n",
+        "\n",
+        "  def test_step(self, batch, batch_idx):\n",
+        "    inputs, targets = batch\n",
+        "    outputs = self.forward(inputs)\n",
+        "    test_accuracy = accuracy(outputs, targets)\n",
+        "    loss = self.loss(outputs, targets)\n",
+        "    self.log(\"test_accuracy\", test_accuracy)\n",
+        "    return {\"loss\": loss, \"test_accuracy\": test_accuracy}\n",
+        "\n",
+        "  # Calculate accuracy for each batch at a time\n",
+        "  def binary_accuracy(self, outputs, targets):\n",
+        "    _, outputs = torch.max(outputs, 1)\n",
+        "    correct_results_sum  = (outputs == targets).sum().float()\n",
+        "    acc = correct_results_sum / targets.shape[0]\n",
+        "    return acc\n",
+        "\n",
+        "  def predict_step(self, batch, batch_idx):\n",
+        "    return self(batch)"
+      ],
+      "metadata": {
+        "id": "yJxzY7_JHPTe"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Training the model"
+      ],
+      "metadata": {
+        "id": "i_sl-qbHRGRf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "phYJjRDyRHfh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
