--- a/deep-learning-with-pytorch-step-by-step/01_visualizing_gradient_descent.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/01_visualizing_gradient_descent.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN0vGmKy0GGt5GifLsWdDiN",
+      "authorship_tag": "ABX9TyMZn5tHZ7Vb+Z1XEYjoEAQ6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
       ],
       "metadata": {
         "id": "O2fHcTmOlAfh",
-        "outputId": "8b723a8e-5c63-4091-cc54-7c870cc2fba1",
+        "outputId": "f7b7f394-64f7-47a5-e3f1-b6535cfcbe53",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "PDJT3I_udfnH"
       },
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -201,9 +201,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xwwqq0I8lSfm",
-        "outputId": "79fd9532-4814-463f-f7e9-5da19d4f0db8"
+        "outputId": "fde72384-ecfb-4864-a2b3-b545aa5b7f9d"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,9 +246,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LurE252XoFIJ",
-        "outputId": "f3ffcb29-62eb-4502-e553-3e94297f1861"
+        "outputId": "89a245ee-0d60-431d-d77e-55c8942c1922"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,22 +271,22 @@
           "height": 502
         },
         "id": "xKG_etVRpHHT",
-        "outputId": "fd5b7230-e2d6-443e-874d-86dfbff6367c"
+        "outputId": "19902f51-1d99-4d39-d735-9d8242a62ef2"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(<Figure size 864x432 with 2 Axes>,\n",
-              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7fb6f7439dd0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fb6f72c27d0>],\n",
+              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f847c3ece50>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f847c2875d0>],\n",
               "       dtype=object))"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -354,12 +354,12 @@
       ],
       "metadata": {
         "id": "M5hlvNika0hf",
-        "outputId": "fab8e993-1107-4300-b0dd-391ec2a8c36b",
+        "outputId": "8d8e469b-2620-4122-9500-d68b66b5584f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +401,7 @@
       "metadata": {
         "id": "QxZzYdwgb2w9"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -411,24 +411,24 @@
       ],
       "metadata": {
         "id": "TkfsY7nscEWp",
-        "outputId": "b2660dfc-d69a-45f4-d1fe-5f6a136a36c6",
+        "outputId": "6d40e68c-8489-4523-a9ce-a9a628345802",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 468
         }
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(<Figure size 432x432 with 1 Axes>,\n",
-              " <matplotlib.axes._subplots.AxesSubplot at 0x7fb6ec62e050>)"
+              " <matplotlib.axes._subplots.AxesSubplot at 0x7f847c1e0750>)"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -477,24 +477,24 @@
       ],
       "metadata": {
         "id": "qiSRnkitdKT0",
-        "outputId": "41f85843-f161-4d06-8fed-76104dd77623",
+        "outputId": "d467a390-701d-4ebf-e012-d5962e44c641",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 468
         }
       },
-      "execution_count": 15,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(<Figure size 432x432 with 1 Axes>,\n",
-              " <matplotlib.axes._subplots.AxesSubplot at 0x7fb6ec0a0150>)"
+              " <matplotlib.axes._subplots.AxesSubplot at 0x7f8479cbb790>)"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 10
         },
         {
           "output_type": "display_data",
@@ -555,12 +555,12 @@
       ],
       "metadata": {
         "id": "aID0JA-TgY7H",
-        "outputId": "e1980ede-26ad-409e-ed69-e734e4220f43",
+        "outputId": "a51ebecf-79ee-439e-867d-c4333acb331a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,10 +582,28 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "We have just computed the loss (`2.74`) corresponding to our randomly initialized\n",
+        "parameters (`b = 0.49` and `w = -0.13`). \n",
+        "\n",
+        "What if we did the same for ALL possible\n",
+        "values of `b` and `w`? \n",
+        "\n",
+        "Well, not all possible values, but all combinations of evenly spaced\n",
+        "values in a given range, like:"
+      ],
       "metadata": {
         "id": "8jpJrYDphQpG"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YQ2f6WnWZkpX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
