--- a/deep-learning-with-pytorch-lightning/02-transfer-learning/01_cancer_tissue_detection_using_transfer_learning.ipynb
+++ b/deep-learning-with-pytorch-lightning/02-transfer-learning/01_cancer_tissue_detection_using_transfer_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO9XfutD5hgOeXZA/YaujCN",
+      "authorship_tag": "ABX9TyMjmAlmVNtd3j/XlfcdLXaU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,6 +115,8 @@
         "import torchvision.transforms as T\n",
         "from torchvision.utils import make_grid\n",
         "from torchmetrics.functional import accuracy\n",
+        "from torchvision.models import resnet50\n",
+        "\n",
         "import pytorch_lightning as pl"
       ],
       "metadata": {
@@ -1011,11 +1013,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "To build CNN image classifier, let's divide the process into multiple steps, as follows:\n",
+        "The ResNet-50 model is trained on a different dataset. To make the model work on the\n",
+        "PCam dataset, we need to make some configurations and adjustments to the ResNet-50\n",
+        "model, which is done in the model initialization method.\n",
         "\n",
-        "1. Initializing the model\n",
-        "2. Configuring the optimizer\n",
-        "3. Configuring training and testing"
+        "While doing transfer learning, it is important to freeze the weights for the existing layers\n",
+        "to avoid backpropagation and re-training since we are going to leverage the existing\n",
+        "trained model."
       ],
       "metadata": {
         "id": "j1iDqIHnM4bp"
@@ -1030,43 +1034,23 @@
         "    super().__init__()\n",
         "\n",
         "    self.learning_rate = learning_rate \n",
-        "\n",
-        "    # let's build two convolution layers\n",
-        "    self.conv_layer1 = nn.Conv2d(in_channels=3, out_channels=3, kernel_size=3, stride=1, padding=1)  # Input size (256, 3, 32, 32)\n",
-        "    self.relu1 = nn.ReLU()                       # output_shape: (256, 3, 32, 32)\n",
-        "    self.pooling = nn.MaxPool2d(kernel_size=2)   # output_shape: (256, 3, 16, 16)\n",
-        "\n",
-        "    self.conv_layer2 = nn.Conv2d(in_channels=3, out_channels=6, kernel_size=3, stride=1, padding=1)  # output_shape: (256, 6, 16, 16)\n",
-        "    self.relu2 = nn.ReLU()                       # output_shape: (256, 6, 16, 16)\n",
-        "\n",
-        "    # # let's build six fully connected layers\n",
-        "    self.fc1 = nn.Linear(in_features=16 * 16 * 6, out_features=1000)\n",
-        "    self.fc2 = nn.Linear(in_features=1000, out_features=500)\n",
-        "    self.fc3 = nn.Linear(in_features=500, out_features=250)\n",
-        "    self.fc4 = nn.Linear(in_features=250, out_features=120)\n",
-        "    self.fc5 = nn.Linear(in_features=120, out_features=60)\n",
-        "    self.fc6 = nn.Linear(in_features=60, out_features=2)  # Since this is a binary classification, the output should be the probability for the two classes.\n",
-        "\n",
         "    self.loss = nn.CrossEntropyLoss()\n",
-        "    self.save_hyperparameters()\n",
+        "\n",
+        "    # let's load the pretrained model\n",
+        "    self.pretrain_model = resnet50(pretrained=True)\n",
+        "    # set the evaluation mode so that the dropout and batch normalization layers go to evaluation mode\n",
+        "    self.pretrain_model.eval()\n",
+        "\n",
+        "    # let's freeze the weights\n",
+        "    for param in self.pretrain_model.parameters():\n",
+        "      param.requires_grad = False\n",
+        "\n",
+        "    # let's change the final layer of the ResNet-50 model so that we can classify the two categories\n",
+        "    self.pretrain_model.fc = nn.Linear(2048, 2)\n",
         "\n",
         "  def forward(self, x):\n",
-        "    output = self.conv_layer1(x)\n",
-        "    output = self.relu1(output)\n",
-        "    output = self.pooling(output)\n",
-        "\n",
-        "    output = self.conv_layer2(output)\n",
-        "    output = self.relu2(output)\n",
-        "\n",
-        "    # flatten the multidimensional output to single-dimensional to pass into linear layers\n",
-        "    output = output.view(-1, 6 * 16 * 16)\n",
-        "\n",
-        "    output = self.fc1(output)\n",
-        "    output = self.fc2(output)\n",
-        "    output = self.fc3(output)\n",
-        "    output = self.fc4(output)\n",
-        "    output = self.fc5(output)\n",
-        "    output = self.fc6(output)\n",
+        "    # let's pass the data to the pre-trained model\n",
+        "    output = self.pretrain_model(x)\n",
         "    return output\n",
         "\n",
         "  def configure_optimizers(self):\n",
@@ -1077,7 +1061,9 @@
         "  def training_step(self, batch, batch_idx):\n",
         "    inputs, targets = batch\n",
         "    outputs = self(inputs)\n",
-        "    train_accuracy = accuracy(outputs, targets)\n",
+        "    # get the indices of the maximum value of all elements in the input tensor\n",
+        "    preds = torch.argmax(outputs, dim=1)\n",
+        "    train_accuracy = accuracy(preds, targets)\n",
         "    loss = self.loss(outputs, targets)\n",
         "\n",
         "    self.log(\"train_accuracy\", train_accuracy, prog_bar=True)\n",
@@ -1087,20 +1073,21 @@
         "  def test_step(self, batch, batch_idx):\n",
         "    inputs, targets = batch\n",
         "    outputs = self.forward(inputs)\n",
-        "    test_accuracy = accuracy(outputs, targets)\n",
+        "    preds = torch.argmax(outputs, dim=1)\n",
+        "    test_accuracy = accuracy(preds, targets)\n",
         "    loss = self.loss(outputs, targets)\n",
         "    self.log(\"test_accuracy\", test_accuracy)\n",
         "    return {\"loss\": loss, \"test_accuracy\": test_accuracy}\n",
         "\n",
-        "  # Calculate accuracy for each batch at a time\n",
-        "  def binary_accuracy(self, outputs, targets):\n",
-        "    _, outputs = torch.max(outputs, 1)\n",
-        "    correct_results_sum  = (outputs == targets).sum().float()\n",
-        "    acc = correct_results_sum / targets.shape[0]\n",
-        "    return acc\n",
-        "\n",
-        "  def predict_step(self, batch, batch_idx):\n",
-        "    return self(batch)"
+        "  # calculate the overall accuracy of the entire dataset\n",
+        "  def test_epoch_end(self, outputs):\n",
+        "    test_outs = []\n",
+        "    for test_out in outputs:\n",
+        "      out = test_out[\"test_accuracy\"]\n",
+        "      test_outs.append(out)\n",
+        "    total_test_accuracy = torch.stack(test_outs).mean()\n",
+        "    self.log(\"total_test_accuracy\", total_test_accuracy, on_step=False, on_epoch=True)\n",
+        "    return total_test_accuracy"
       ],
       "metadata": {
         "id": "yJxzY7_JHPTe"
