--- a/inside-deep-learing/07-autoencoding-and-self-supervision/03_autoregressive_models.ipynb
+++ b/inside-deep-learing/07-autoencoding-and-self-supervision/03_autoregressive_models.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPyK0q60FMnzZtx6Ijc24CZ",
+      "authorship_tag": "ABX9TyNKsjUNofyPQRsz5Iw3WT4f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14486,7 +14486,7 @@
       "metadata": {
         "id": "_9xoD7-8EibG"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14502,7 +14502,7 @@
       "metadata": {
         "id": "8U1JNhEmEkzG"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14513,7 +14513,7 @@
       "metadata": {
         "id": "nXiYSSxO707X"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14572,7 +14572,7 @@
       "metadata": {
         "id": "iQy_V8L791sw"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14613,7 +14613,7 @@
         "id": "_ZbKPqk16Hhp",
         "outputId": "11919d76-bf44-4cc0-9cf4-5f8e18680dec"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14636,12 +14636,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class AutoRegressiveDataset(Dataset):\n",
+        "  \"\"\"\n",
+        "  Creates an autoregressive dataset from one single, long, source sequence by breaking it up into \"chunks\".\n",
+        "  \"\"\"\n",
+        "  def __init__(self, large_string, MAX_CHUNK=500):\n",
+        "    \"\"\"\n",
+        "    large_string: the original long source sequence that chunks will be extracted from\n",
+        "    MAX_CHUNK: the maximum allowed size of any chunk. \n",
+        "    \"\"\"\n",
+        "    self.doc = large_string\n",
+        "    self.MAX_CHUNK = MAX_CHUNK \n",
+        "\n",
+        "  def __len__(self):\n",
+        "    # The number of items is the number of characters divided by chunk size\n",
+        "    return (len(self.doc) - 1) // self.MAX_CHUNK\n",
+        "\n",
+        "  def __getitem__(self, idx):\n",
+        "    # Compute the starting position for the idx'th chunk\n",
+        "    start = idx * self.MAX_CHUNK\n",
+        "    # Grab the input sub-string\n",
+        "    sub_string = self.doc[start: start + self.MAX_CHUNK]\n",
+        "    # convert the sub-string into integers based on our vocab\n",
+        "    x = [vocab2indx[c] for c in sub_string]\n",
+        "\n",
+        "    # grab the label sub-string by shifting over by 1\n",
+        "    sub_string = self.doc[start + 1: start+ self.MAX_CHUNK + 1]\n",
+        "    # convert the label sub-string into integers based on our vocab\n",
+        "    y = [vocab2indx[c] for c in sub_string]\n",
+        "\n",
+        "    # Converts the label substring into integers based on our vocab\n",
+        "    return torch.tensor(x, dtype=torch.int64), torch.tensor(y, dtype=int64)"
+      ],
       "metadata": {
         "id": "rsFqIimT7L9B"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now comes the tricky part: implementing an autoregressive RNN model. For this we\n",
+        "use a gated recurrent unit (GRU)."
+      ],
+      "metadata": {
+        "id": "ra3p8YMnKKgT"
+      }
     },
     {
       "cell_type": "markdown",
