--- a/deep-learning-with-pytorch-step-by-step/02_simple_regression_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/02_simple_regression_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOMQHbd0Hbsd08ySTSNILZP",
+      "authorship_tag": "ABX9TyOJ1fFgy8jo6lOUoQBVjWLI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,10 +80,25 @@
         "from plots.chapter1 import *"
       ],
       "metadata": {
-        "id": "pgGfHWV5oZqU"
+        "id": "pgGfHWV5oZqU",
+        "outputId": "3b05b48f-6f16-42c5-c37a-b61cc874a13c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Installing torchviz...\n",
+            "Downloading files from GitHub repo to Colab...\n",
+            "Creating folders...\n",
+            "Finished!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -181,10 +196,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 502
+          "height": 505
         },
         "id": "ZBTcz6BhqYoR",
-        "outputId": "84fec7c9-8860-4ce7-e7ff-065fa59de9bd"
+        "outputId": "3e1c263e-7c0a-4dd3-85a7-a1fd19fa03b1"
       },
       "execution_count": 5,
       "outputs": [
@@ -193,8 +208,8 @@
           "data": {
             "text/plain": [
               "(<Figure size 864x432 with 2 Axes>,\n",
-              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f84be2996d0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f84be2cf7d0>],\n",
+              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7fd6e3082ed0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd66864e890>],\n",
               "       dtype=object))"
             ]
           },
@@ -252,9 +267,268 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "For training a model, you need to randomly initialize the parameters/weights."
+      ],
+      "metadata": {
+        "id": "H5yEPuTVTJks"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 0 - Initializes parameters \"b\" and \"w\" randomly\n",
+        "np.random.seed(42)\n",
+        "\n",
+        "b = np.random.randn(1)\n",
+        "w = np.random.randn(1)\n",
+        "\n",
+        "print(b, w)"
+      ],
+      "metadata": {
+        "id": "br2g0-4HSk4d",
+        "outputId": "380a838e-f89d-46ae-83e3-c0fe9ffd7cf9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.49671415] [-0.1382643]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Step 1: Compute Model's Predictions"
+      ],
+      "metadata": {
+        "id": "B18OXUGQS0fl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This is the forward pass - it simply computes the model’s predictions using the current\n",
+        "values of the parameters/weights."
+      ],
+      "metadata": {
+        "id": "dWR0NKt7TPu4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 1 - Computes our model's predicted output - forward pass\n",
+        "yhat = b + w * x_train"
+      ],
+      "metadata": {
+        "id": "cHzyWY9FS1s3"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Step 2: Compute the Loss"
+      ],
+      "metadata": {
+        "id": "louZXxr4S_v6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For a regression problem, the loss is given by the Mean Squared Error (MSE), that\n",
+        "is, the average of all squared errors, that is, the average of all squared differences\n",
+        "between labels (`y`) and predictions (`b + wx`).\n",
+        "\n",
+        "Here, we are using all data points of the training set to compute the\n",
+        "loss, so `n = N = 80`, meaning we are performing batch gradient descent."
+      ],
+      "metadata": {
+        "id": "t7ZFJK_hTYss"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 2 - Computing the loss\n",
+        "\n",
+        "# We are using ALL data points, so this is BATCH gradient descent. How wrong is our model? That's the error!\n",
+        "error = (yhat - y_train)\n",
+        "\n",
+        "# It is a regression, so it computes mean squared error (MSE)\n",
+        "loss = (error ** 2).mean()\n",
+        "print(loss)"
+      ],
+      "metadata": {
+        "id": "1n2CtsUXS9gj",
+        "outputId": "d4c91caf-8b4a-4183-deb1-4b294cc89bf4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.808129216295391\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Step 3: Compute the Gradients"
+      ],
+      "metadata": {
+        "id": "DpLPVKTmT3IN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A gradient is a partial derivative — why partial? Because one computes it with\n",
+        "respect to (w.r.t.) a single parameter. We have two parameters, b and w, so we must compute two partial derivatives.\n",
+        "\n",
+        "A derivative tells you how much a given quantity changes when you slightly vary\n",
+        "some other quantity. In our case, how much does our MSE loss change when we\n",
+        "vary each one of our two parameters separately?\n",
+        "\n",
+        "> **Gradient** = how much the loss changes if ONE parameter\n",
+        "changes a little bit!"
+      ],
+      "metadata": {
+        "id": "YD9USz_wT30a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 3 - Computes gradients for both \"b\" and \"w\" parameters\n",
+        "b_grad = 2 * error.mean()\n",
+        "w_grad = 2 * (x_train * error).mean()\n",
+        "print(b_grad, w_grad)"
+      ],
+      "metadata": {
+        "id": "Vl3-r09yURpb",
+        "outputId": "8748589b-ee76-43a4-af5a-34dc82c25150",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-3.108262701823821 -1.8206663430690853\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Step 4 - Update the Parameters"
+      ],
+      "metadata": {
+        "id": "jeBiRiOMUknN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In the final step, we use the gradients to update the parameters. \n",
+        "\n",
+        "Since we are\n",
+        "trying to minimize our losses, we reverse the sign of the gradient for the update.\n",
+        "\n",
+        "In our example, let’s start with a value of 0.1 for the learning rate."
+      ],
+      "metadata": {
+        "id": "wKC5qiATUlRu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sets learning rate\n",
+        "lr = 0.1\n",
+        "print(b, w)\n",
+        "\n",
+        "# Step 4 - Updates parameters using gradients and the learning rate\n",
+        "b = b - lr * b_grad\n",
+        "w = w - lr * w_grad\n",
+        "\n",
+        "print(b, w)"
+      ],
+      "metadata": {
+        "id": "pkbTlKSbUrD4",
+        "outputId": "2c8709e8-0267-4c7a-ff02-f50d1bca2bed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.49671415] [-0.1382643]\n",
+            "[0.80754042] [0.04380233]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Step 5 - Rinse and Repeat!"
+      ],
+      "metadata": {
+        "id": "robyWOO0VQNg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we use the updated parameters to go back to Step 1 and restart the process.\n",
+        "\n",
+        "Repeating this process over and over for many epochs is, in a nutshell, training a\n",
+        "model."
+      ],
+      "metadata": {
+        "id": "x_8OmIQ8VQ6g"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Linear Regression in Numpy"
+      ],
+      "metadata": {
+        "id": "hnago_O4Vmvm"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "i1vRq2cJqtzF"
+        "id": "4vsVHIgOVo7o"
       }
     }
   ]
