--- a/inside-deep-learing/07-autoencoding-and-self-supervision/03_autoregressive_models.ipynb
+++ b/inside-deep-learing/07-autoencoding-and-self-supervision/03_autoregressive_models.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNKsjUNofyPQRsz5Iw3WT4f",
+      "authorship_tag": "ABX9TyP5V8Kv1a4TjFAvS6ANqRbP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14678,16 +14678,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now comes the tricky part: implementing an autoregressive RNN model. For this we\n",
-        "use a gated recurrent unit (GRU)."
-      ],
-      "metadata": {
-        "id": "ra3p8YMnKKgT"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "##Autoregressive models for sequences"
       ],
       "metadata": {
@@ -14758,14 +14748,10 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "9BdyHO1YNiOT"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
+        "Now comes the tricky part: implementing an autoregressive RNN model. For this we\n",
+        "use a gated recurrent unit (GRU).\n",
+        "\n",
         "Let’s define some basic hyperparameters."
       ],
       "metadata": {
@@ -14789,67 +14775,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# first argument is the mean, second is the standard deviation \n",
-        "normal = torch.distributions.Normal(0, 0.5)"
-      ],
-      "metadata": {
-        "id": "SQjlZC88Qh4H"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# creating our noisy sample\n",
-        "def add_noise(x, device=\"cpu\"):\n",
-        "  return x + normal.sample(sample_shape=torch.Size(x.shape)).to(device)"
-      ],
-      "metadata": {
-        "id": "rhD07sYhQiV-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def get_layer(in_size, out_size):\n",
-        "  \"\"\"\n",
-        "  in_size: how many neurons/features are coming into this layer\n",
-        "  out_size: how many neurons/outputs this hidden layer should produce\n",
-        "  \"\"\"\n",
-        "  return nn.Sequential( #Organize the conceptual \"block\" of a hidden layer into a Sequential object\n",
-        "      nn.Linear(in_size,  out_size),\n",
-        "      nn.BatchNorm1d(out_size),\n",
-        "      nn.ReLU())"
-      ],
-      "metadata": {
-        "id": "dmic9HG2Ux0G"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Let's define a new `AdditiveGaussNoise` layer. It takes the input x\n",
-        "in. \n",
+        "class AutoRegressive(nn.Module):\n",
         "\n",
-        "If we are in training mode (denoted by `self.training`), we add noise to the input;\n",
-        "otherwise we return it unperturbed."
-      ],
-      "metadata": {
-        "id": "EMg4LDB9YtRN"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class AdditiveGausNoiseLayer(nn.Module):\n",
-        "  def __init__(self):\n",
-        "    super().__init__()\n",
-        "    # We don't need to do anything in the constructor of this object.\n",
+        "  def __init__(self, num_embeddings, embd_size, hidden_size, layers=1):\n",
+        "    super(AutoRegressive, self).__init__()\n",
+        "    self.hidden_size = hidden_size\n",
+        "    self.embedding = nn.Embedding(num_embeddings, embd_size)\n",
+        "    # GRUCell processes sequences one item at a time\n",
+        "    self.layers = nn.ModuleList([nn.GRUCell(embd_size, hidden_size)] + [nn.GRUCell(hidden_size, hidden_size) for _ in range(layers - 1)])\n",
+        "    self.norms = nn.ModuleList([nn.LayerNorm(hidden_size) for _ in range(layers)])\n",
+        "\n",
+        "    self.prediction_class = nn.Sequential(\n",
+        "      nn.Linear(hidden_size, hidden_size),      # (B, *, D)\n",
+        "      nn.LeakyReLU(),\n",
+        "      nn.LayerNorm(hidden_size),                # (B, *, D)\n",
+        "      nn.Linear(hidden_size, num_embeddings)    # (B, *. D) -> B(B, *, VocabSize)\n",
+        "    )\n",
         "\n",
         "  def forward(self, x):\n",
         "    # check if we are in training (True) or evaluation (False) mode.\n",
